objects/Spotter_Hotspot__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Spotter Hotspots</relationshipLabel>
        <relationshipName>Spotter_Hotspots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spotter_Configuration__c</fullName>
        <label>Spotter Configuration</label>
        <referenceTo>Spotter_Configuration__c</referenceTo>
        <relationshipLabel>Spotter Hotspots</relationshipLabel>
        <relationshipName>Spotter_Hotspots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Style_CSS__c</fullName>
        <label>Style CSS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Spotter Hotspot</label>
    <nameField>
        <displayFormat>SH-{0}</displayFormat>
        <label>Spotter Hotspots Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spotter Hotspots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>